...
                IconButton(
                    onClick = { onBack() },
                    modifier = Modifier.offset(y = 10.dp)
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Volver"
                    )
                }

                Column(
                    modifier = Modifier
                        .align(Alignment.Center)
...
                        text = "VINYLS",
                        fontSize = 14.sp,
                        color = Color(0xFF9C27B0),
                        fontWeight = FontWeight.Medium
                    )
                    Spacer(modifier = Modifier.height(4.dp))
                    Text("Artistas", style = MaterialTheme.typography.titleLarge, modifier=Modifier.testTag("lista_artistas"))
                }
            }
        }
    ) { paddingValues ->

        Column(modifier = Modifier.padding(paddingValues)) {
...
            Row(
                modifier = Modifier
                    .padding(16.dp)
                    .height(40.dp)
            ) {
                val items = listOf(
                    TipoArtistaDto.MUSICO to "MÚSICOS",
                    TipoArtistaDto.BANDA to "BANDAS"
                )

                items.forEachIndexed { index, (tipo, label) ->
                    val seleccionado = tipo == tipoSeleccionado

                    val shape = when (index) {
...
